add getImportedNameSemanticRule rule to semantic tokens plugin

--- a/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
+++ b/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
@@ -47,6 +47,8 @@ library
     , transformers
     , bytestring
     , syb
+    , deepseq
+    , hls-graph == 2.5.0.0
 
   default-language:   Haskell2010
   default-extensions: DataKinds
