--- a/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
+++ b/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
@@ -20,6 +20,7 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
+  ghc-options: -Wall
   buildable: True
   exposed-modules:
     Ide.Plugin.SemanticTokens
