--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -314,12 +314,12 @@ common floskell
     cpp-options: -Dhls_floskell
 
 common fourmolu
-  if flag(fourmolu) 
+  if flag(fourmolu)
     build-depends: hls-fourmolu-plugin == 2.5.0.0
     cpp-options: -Dhls_fourmolu
 
 common ormolu
-  if flag(ormolu) 
+  if flag(ormolu)
     build-depends: hls-ormolu-plugin == 2.5.0.0
     cpp-options: -Dhls_ormolu
 
@@ -522,7 +522,6 @@ test-suite func-test
     , data-default
     , deepseq
     , hashable
-    , hspec-expectations
     , lens
     , lens-aeson
     , ghcide
@@ -541,6 +540,7 @@ test-suite func-test
   main-is:            Main.hs
   other-modules:
     Config
+    ConfigSchema
     Format
     FunctionalBadProject
     HieBios
@@ -556,7 +556,7 @@ test-suite func-test
   if flag(eval)
     cpp-options: -Dhls_eval
 -- formatters
-  if flag(floskell) 
+  if flag(floskell)
     cpp-options: -Dhls_floskell
   if flag(fourmolu)
     cpp-options: -Dhls_fourmolu
