add doc and ci test for semantic tokens

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,6 +240,9 @@ jobs:
         name: Test hls-overloaded-record-dot-plugin test suite
         run: cabal test hls-overloaded-record-dot-plugin --test-options="$TEST_OPTS" || LSP_TEST_LOG_COLOR=0 LSP_TEST_LOG_MESSAGES=true LSP_TEST_LOG_STDERR=true cabal test hls-overloaded-record-dot-plugin --test-options="$TEST_OPTS"
 
+      - if: matrix.test
+        name: Test hls-semantic-tokens-plugin test suite
+        run: cabal test hls-semantic-tokens-plugin --test-options="$TEST_OPTS" || cabal test hls-semantic-tokens-plugin --test-options="$TEST_OPTS"
 
 
   test_post_job:
