--- a/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
+++ b/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
@@ -28,6 +28,7 @@ library
     Ide.Plugin.SemanticTokens.Mappings
   other-modules:
     Ide.Plugin.SemanticTokens.Query
+    Ide.Plugin.SemanticTokens.SemanticConfig
     Ide.Plugin.SemanticTokens.Utils
     Ide.Plugin.SemanticTokens.Internal
 
@@ -52,12 +53,15 @@ library
     , array
     , deepseq
     , hls-graph == 2.5.0.0
+    , template-haskell
+    , data-default
 
   default-language:   Haskell2010
   default-extensions: DataKinds
 
 test-suite tests
   type:             exitcode-stdio-1.0
+  ghc-options: -Wall
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
@@ -83,3 +87,5 @@ test-suite tests
     , bytestring
     , ghcide                == 2.5.0.0
     , hls-plugin-api        == 2.5.0.0
+    , template-haskell
+    , data-default
