--- a/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
+++ b/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
@@ -20,7 +20,7 @@ source-repository head
     location: https://github.com/haskell/haskell-language-server.git
 
 library
-  ghc-options: -Wall
+  ghc-options: -Wall  -Wincomplete-patterns -Werror=incomplete-patterns
   buildable: True
   exposed-modules:
     Ide.Plugin.SemanticTokens
@@ -61,7 +61,7 @@ library
 
 test-suite tests
   type:             exitcode-stdio-1.0
-  ghc-options: -Wall
+  ghc-options: -Wall  -Wincomplete-patterns -Werror=incomplete-patterns
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
