--- a/plugins/hls-class-plugin/hls-class-plugin.cabal
+++ b/plugins/hls-class-plugin/hls-class-plugin.cabal
@@ -44,6 +44,7 @@ library
     , deepseq
     , extra
     , ghc
+    , ghc-exactprint  >= 1.5
     , ghcide          == 2.6.0.0
     , ghc-boot-th
     , hls-graph
@@ -53,11 +54,6 @@ library
     , mtl
     , text
     , transformers
-
-  if impl(ghc >=9.2.1)
-    build-depends: ghc-exactprint >= 1.5
-  else
-    build-depends: ghc-exactprint >= 0.6.4 && <1.1
 
   default-language:   Haskell2010
   default-extensions:
