--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -30,6 +30,7 @@ library
   build-depends:
     , base            >=4.12 && <5
     , filepath
+    , fourmolu ^>= 0.14
     , ghc
     , ghc-boot-th
     , ghcide          == 2.6.0.0
@@ -41,13 +42,8 @@ library
     , text
     , transformers
 
-  if impl(ghc >= 9.0) && impl(ghc < 9.2)
-    build-depends: fourmolu ^>= 0.11
-  else 
-    build-depends: fourmolu ^>= 0.14
-
   -- fourmolu 0.9.0 fails to build on Windows CI for reasons unknown
-  if impl(ghc >= 9.2) && os(windows) && impl(ghc < 9.4)
+  if os(windows) && impl(ghc < 9.4)
      build-depends: fourmolu > 0.9.0.0 || < 0.9.0.0
   default-language: Haskell2010
 
