--- a/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
+++ b/plugins/hls-alternate-number-format-plugin/hls-alternate-number-format-plugin.cabal
@@ -21,13 +21,15 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+    ghc-options:   -Wall -Wunused-packages
+
 library
+  import:           warnings
   exposed-modules:  Ide.Plugin.AlternateNumberFormat, Ide.Plugin.Conversion
   other-modules:    Ide.Plugin.Literals
   hs-source-dirs:   src
-  ghc-options:      -Wall
   build-depends:
-      aeson
     , base                 >=4.12 && < 5
     , containers
     , extra
@@ -35,14 +37,12 @@ library
     , ghc-boot-th
     , hls-graph
     , hls-plugin-api       == 2.6.0.0
-    , hie-compat
     , lens
     , lsp                  ^>=2.3.0.0
     , mtl
     , regex-tdfa
     , syb
     , text
-    , unordered-containers
 
   default-language: Haskell2010
   default-extensions:
@@ -52,6 +52,7 @@ library
     RecordWildCards
 
 test-suite tests
+  import:           warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
@@ -64,7 +65,6 @@ test-suite tests
     , hls-alternate-number-format-plugin
     , hls-test-utils       == 2.6.0.0
     , lsp
-    , QuickCheck
     , regex-tdfa
     , tasty-quickcheck
     , text
