--- a/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
+++ b/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
@@ -22,7 +22,11 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import: warnings
   exposed-modules:  Ide.Plugin.ChangeTypeSignature
   hs-source-dirs:   src
   build-depends:
@@ -34,9 +38,7 @@ library
     , syb
     , text
     , transformers
-    , unordered-containers
     , containers
-  ghc-options: -Wall
   default-language: Haskell2010
   default-extensions:
     ConstraintKinds
@@ -50,18 +52,17 @@ library
 
 
 test-suite tests
+  import:           warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
   build-depends:
     , base                 >=4.12 && < 5
     , filepath
     , hls-change-type-signature-plugin
     , hls-test-utils       == 2.6.0.0
-    , lsp
-    , QuickCheck
     , regex-tdfa
     , text
   default-extensions:
