--- a/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
+++ b/plugins/hls-semantic-tokens-plugin/hls-semantic-tokens-plugin.cabal
@@ -37,6 +37,7 @@ library
     , aeson
     , base                  >=4.12 && <5
     , containers
+    , text-rope
     , extra
     , hiedb
     , mtl                   >= 2.2
