--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -22,6 +22,10 @@ extra-source-files:
   test/testdata/**/*.cabal
   test/testdata/**/*.yaml
   test/testdata/**/*.hs
+
+  plugins/**/test/testdata/*.hs
+  plugins/**/test/testdata/*.yaml
+
   bindist/wrapper.in
 
 flag pedantic
@@ -63,143 +67,14 @@ flag ignore-plugins-ghc-bounds
   default:     False
   manual:      True
 
-
-flag cabal
-  description: Enable cabal plugin
-  default:     True
-  manual:      True
-
-flag class
-  description: Enable class plugin
-  default:     True
-  manual:      True
-
-flag callHierarchy
-  description: Enable call hierarchy plugin
-  default:     True
-  manual:      True
-
-flag eval
-  description: Enable eval plugin
-  default:     True
-  manual:      True
-
-flag importLens
-  description: Enable importLens plugin
-  default:     True
-  manual:      True
-
-flag rename
-  description: Enable rename plugin
-  default:     True
-  manual:      True
-
-flag retrie
-  description: Enable retrie plugin
-  default:     True
-  manual:      True
-
-flag hlint
-  description: Enable hlint plugin
-  default:     True
-  manual:      True
-
-flag stan
-  description: Enable stan plugin
-  default:     True
-  manual:      True
-
-flag moduleName
-  description: Enable moduleName plugin
-  default:     True
-  manual:      True
-
-flag pragmas
-  description: Enable pragmas plugin
-  default:     True
-  manual:      True
-
-flag splice
-  description: Enable splice plugin
-  default:     True
-  manual:      True
-
-flag alternateNumberFormat
-  description: Enable Alternate Number Format plugin
-  default:     True
-  manual:      True
-
-flag qualifyImportedNames
-  description: Enable qualifyImportedNames plugin
-  default:     True
-  manual:      True
-
-flag codeRange
-  description: Enable Code Range plugin
-  default:     True
-  manual:      True
-
-flag changeTypeSignature
-  description: Enable changeTypeSignature plugin
-  default:     True
-  manual:      True
-
-flag gadt
-  description: Enable gadt plugin
-  default:     True
-  manual:      True
-
-flag explicitFixity
-  description: Enable explicitFixity plugin
-  default:     True
-  manual:      True
-
-flag explicitFields
-  description: Enable explicitFields plugin
-  default:     True
-  manual:      True
-
-flag overloadedRecordDot
-  description: Enable overloadedRecordDot plugin
-  default:     True
-  manual:      True
-
-flag semanticTokens
-  description: Enable semantic tokens plugin
-  default:     True
-  manual:      True
-
--- formatters
-
-flag floskell
-  description: Enable floskell plugin
-  default:     True
-  manual:      True
-
-flag fourmolu
-  description: Enable fourmolu plugin
-  default:     True
-  manual:      True
-
-flag ormolu
-  description: Enable ormolu plugin
-  default:     True
-  manual:      True
-
-flag stylishHaskell
-  description: Enable stylishHaskell plugin
-  default:     True
-  manual:      True
-
-flag refactor
-  description: Enable refactor plugin
-  default:     True
-  manual:      True
-
 flag dynamic
   description: Build with the dyn rts
   default:     True
   manual:      True
+
+-----------------------------
+-- cabal-fmt plugin
+-----------------------------
 
 flag cabalfmt
   description: Enable cabal-fmt plugin
@@ -211,138 +86,373 @@ common cabalfmt
     build-depends: hls-cabal-fmt-plugin == 2.6.0.0
     cpp-options: -Dhls_cabalfmt
 
+-----------------------------
+-- cabal plugin
+-----------------------------
+
+flag cabal
+  description: Enable cabal plugin
+  default:     True
+  manual:      True
+
 common cabal
   if flag(cabal)
     build-depends: hls-cabal-plugin == 2.6.0.0
     cpp-options: -Dhls_cabal
+
+-----------------------------
+-- class plugin
+-----------------------------
+
+flag class
+  description: Enable class plugin
+  default:     True
+  manual:      True
 
 common class
   if flag(class)
     build-depends: hls-class-plugin == 2.6.0.0
     cpp-options: -Dhls_class
 
+-----------------------------
+-- call-hierarchy plugin
+-----------------------------
+
+flag callHierarchy
+  description: Enable call hierarchy plugin
+  default:     True
+  manual:      True
+
 common callHierarchy
   if flag(callHierarchy)
     build-depends: hls-call-hierarchy-plugin == 2.6.0.0
     cpp-options: -Dhls_callHierarchy
+
+-----------------------------
+-- eval plugin
+-----------------------------
+
+flag eval
+  description: Enable eval plugin
+  default:     True
+  manual:      True
 
 common eval
   if flag(eval)
     build-depends: hls-eval-plugin == 2.6.0.0
     cpp-options: -Dhls_eval
 
+-----------------------------
+-- import lens plugin
+-----------------------------
+
 common importLens
   if flag(importLens)
     build-depends: hls-explicit-imports-plugin == 2.6.0.0
     cpp-options: -Dhls_importLens
+
+flag importLens
+  description: Enable importLens plugin
+  default:     True
+  manual:      True
+
+-----------------------------
+-- rename plugin
+-----------------------------
+
+flag rename
+  description: Enable rename plugin
+  default:     True
+  manual:      True
 
 common rename
   if flag(rename)
     build-depends: hls-rename-plugin == 2.6.0.0
     cpp-options: -Dhls_rename
 
+-----------------------------
+-- retrie plugin
+-----------------------------
+
+flag retrie
+  description: Enable retrie plugin
+  default:     True
+  manual:      True
+
 common retrie
   if flag(retrie)
     build-depends: hls-retrie-plugin == 2.6.0.0
     cpp-options: -Dhls_retrie
+
+-----------------------------
+-- hlint plugin
+-----------------------------
+
+flag hlint
+  description: Enable hlint plugin
+  default:     True
+  manual:      True
 
 common hlint
   if flag(hlint) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-hlint-plugin == 2.6.0.0
     cpp-options: -Dhls_hlint
 
+-----------------------------
+-- stan plugin
+-----------------------------
+
+flag stan
+  description: Enable stan plugin
+  default:     True
+  manual:      True
+
 common stan
   if flag(stan) && (impl(ghc > 8.8.1) && impl(ghc <= 9.2.3) || impl(ghc >= 9.4.0) && impl(ghc < 9.10.0))
     build-depends: hls-stan-plugin == 2.6.0.0
     cpp-options: -Dhls_stan
+
+-----------------------------
+-- module name plugin
+-----------------------------
+
+flag moduleName
+  description: Enable moduleName plugin
+  default:     True
+  manual:      True
 
 common moduleName
   if flag(moduleName)
     build-depends: hls-module-name-plugin == 2.6.0.0
     cpp-options: -Dhls_moduleName
 
+-----------------------------
+-- pragmas plugin
+-----------------------------
+
+flag pragmas
+  description: Enable pragmas plugin
+  default:     True
+  manual:      True
+
 common pragmas
   if flag(pragmas)
     build-depends: hls-pragmas-plugin == 2.6.0.0
     cpp-options: -Dhls_pragmas
+
+-----------------------------
+-- splice plugin
+-----------------------------
+
+flag splice
+  description: Enable splice plugin
+  default:     True
+  manual:      True
 
 common splice
   if flag(splice)
     build-depends: hls-splice-plugin == 2.6.0.0
     cpp-options: -Dhls_splice
 
+-----------------------------
+-- alternate number format plugin
+-----------------------------
+
+flag alternateNumberFormat
+  description: Enable Alternate Number Format plugin
+  default:     True
+  manual:      True
+
 common alternateNumberFormat
   if flag(alternateNumberFormat)
     build-depends: hls-alternate-number-format-plugin == 2.6.0.0
     cpp-options: -Dhls_alternateNumberFormat
+
+-----------------------------
+-- qualify imported names plugin
+-----------------------------
+
+flag qualifyImportedNames
+  description: Enable qualifyImportedNames plugin
+  default:     True
+  manual:      True
 
 common qualifyImportedNames
   if flag(qualifyImportedNames)
     build-depends: hls-qualify-imported-names-plugin == 2.6.0.0
     cpp-options: -Dhls_qualifyImportedNames
 
+-----------------------------
+-- code range plugin
+-----------------------------
+
+flag codeRange
+  description: Enable Code Range plugin
+  default:     True
+  manual:      True
+
 common codeRange
   if flag(codeRange)
     build-depends: hls-code-range-plugin == 2.6.0.0
     cpp-options: -Dhls_codeRange
+
+-----------------------------
+-- change type signature plugin
+-----------------------------
+
+flag changeTypeSignature
+  description: Enable changeTypeSignature plugin
+  default:     True
+  manual:      True
 
 common changeTypeSignature
   if flag(changeTypeSignature)
     build-depends: hls-change-type-signature-plugin == 2.6.0.0
     cpp-options: -Dhls_changeTypeSignature
 
+-----------------------------
+-- gadt plugin
+-----------------------------
+
+flag gadt
+  description: Enable gadt plugin
+  default:     True
+  manual:      True
+
 common gadt
   if flag(gadt)
     build-depends: hls-gadt-plugin == 2.6.0.0
     cpp-options: -Dhls_gadt
+
+-----------------------------
+-- explicit fixity plugin
+-----------------------------
+
+flag explicitFixity
+  description: Enable explicitFixity plugin
+  default:     True
+  manual:      True
 
 common explicitFixity
   if flag(explicitFixity)
     build-depends: hls-explicit-fixity-plugin == 2.6.0.0
     cpp-options: -DexplicitFixity
 
+-----------------------------
+-- explicit fields plugin
+-----------------------------
+
+flag explicitFields
+  description: Enable explicitFields plugin
+  default:     True
+  manual:      True
+
 common explicitFields
   if flag(explicitFields)
     build-depends: hls-explicit-record-fields-plugin == 2.6.0.0
     cpp-options: -DexplicitFields
+
+-----------------------------
+-- overloaded record dot plugin
+-----------------------------
+
+flag overloadedRecordDot
+  description: Enable overloadedRecordDot plugin
+  default:     True
+  manual:      True
 
 common overloadedRecordDot
   if flag(overloadedRecordDot)
     build-depends: hls-overloaded-record-dot-plugin == 2.6.0.0
     cpp-options: -Dhls_overloaded_record_dot
 
--- formatters
+-----------------------------
+-- floskell plugin
+-----------------------------
+
+flag floskell
+  description: Enable floskell plugin
+  default:     True
+  manual:      True
 
 common floskell
   if flag(floskell) && (impl(ghc < 9.7) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-floskell-plugin == 2.6.0.0
     cpp-options: -Dhls_floskell
 
+-----------------------------
+-- fourmolu plugin
+-----------------------------
+
+flag fourmolu
+  description: Enable fourmolu plugin
+  default:     True
+  manual:      True
+
 common fourmolu
   if flag(fourmolu)
     build-depends: hls-fourmolu-plugin == 2.6.0.0
     cpp-options: -Dhls_fourmolu
+
+-----------------------------
+-- ormolu plugin
+-----------------------------
+
+flag ormolu
+  description: Enable ormolu plugin
+  default:     True
+  manual:      True
 
 common ormolu
   if flag(ormolu)
     build-depends: hls-ormolu-plugin == 2.6.0.0
     cpp-options: -Dhls_ormolu
 
+-----------------------------
+-- stylish-haskell plugin
+-----------------------------
+
+flag stylishHaskell
+  description: Enable stylishHaskell plugin
+  default:     True
+  manual:      True
+
 common stylishHaskell
   if flag(stylishHaskell) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
     build-depends: hls-stylish-haskell-plugin == 2.6.0.0
     cpp-options: -Dhls_stylishHaskell
+
+-----------------------------
+-- refactor plugin
+-----------------------------
+
+flag refactor
+  description: Enable refactor plugin
+  default:     True
+  manual:      True
 
 common refactor
   if flag(refactor)
     build-depends: hls-refactor-plugin == 2.6.0.0
     cpp-options: -Dhls_refactor
 
+-----------------------------
+-- semantic tokens plugin
+-----------------------------
+
+flag semanticTokens
+  description: Enable semantic tokens plugin
+  default:     True
+  manual:      True
+
 common semanticTokens
   if flag(semanticTokens)
     build-depends: hls-semantic-tokens-plugin == 2.6.0.0
     cpp-options: -Dhls_semanticTokens
 
+-----------------------------
+-- HLS
+-----------------------------
 
 library
   import:           common-deps
