--- a/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
+++ b/plugins/hls-refactor-plugin/hls-refactor-plugin.cabal
@@ -110,6 +110,8 @@ test-suite tests
     , hls-test-utils      == 2.6.0.0
     , lens
     , lsp-types
+    -- for MIN_VERSION_ghc
+    , ghc
     , text
     , hls-plugin-api
     , parser-combinators
