--- a/plugins/hls-pragmas-plugin/hls-pragmas-plugin.cabal
+++ b/plugins/hls-pragmas-plugin/hls-pragmas-plugin.cabal
@@ -21,26 +21,28 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import: warnings
   exposed-modules:  Ide.Plugin.Pragmas
   hs-source-dirs:   src
   build-depends:
     , base                  >=4.12 && <5
     , extra
     , fuzzy
-    , ghc
     , ghcide                == 2.6.0.0
     , hls-plugin-api        == 2.6.0.0
     , lens
     , lsp
     , text
     , transformers
-    , unordered-containers
     , containers
-  ghc-options: -Wall -Wno-name-shadowing
   default-language: Haskell2010
 
 test-suite tests
+  import: warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
