--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -40,6 +40,12 @@ flag pedantic
   default:     False
   manual:      True
 
+common warnings
+  ghc-options:
+    -Wall -Wincomplete-uni-patterns -Wunused-packages
+    -Wno-unticked-promoted-constructors
+    -fno-ignore-asserts
+
 library
   default-language:   Haskell2010
   build-depends:
@@ -218,10 +224,6 @@ library
     Development.IDE.Session.VersionCheck
     Development.IDE.Types.Action
 
-  ghc-options:
-    -Wall -Wincomplete-uni-patterns -Wno-unticked-promoted-constructors
-    -Wunused-packages -fno-ignore-asserts
-
   if flag(pedantic)
     -- We eventually want to build with Werror fully, but we haven't
     -- finished purging the warnings, so some are set to not be errors
@@ -246,9 +248,10 @@ flag test-exe
   default:     True
 
 executable ghcide-test-preprocessor
+  import: warnings
   default-language: Haskell2010
   hs-source-dirs:   test/preprocessor
-  ghc-options:      -Wall -Wno-name-shadowing
+  ghc-options:      -Wno-name-shadowing
   main-is:          Main.hs
   build-depends:    base >=4 && <5
 
@@ -260,11 +263,11 @@ flag executable
   default:     True
 
 executable ghcide
+  import: warnings
   default-language:   Haskell2010
   hs-source-dirs:     exe
-  ghc-options:
-    -threaded -Wall -Wincomplete-uni-patterns -Wno-name-shadowing -Wunused-packages
-    -rtsopts "-with-rtsopts=-I0 -A128M -T"
+  ghc-options:        -threaded -rtsopts "-with-rtsopts=-I0 -A128M -T" -Wno-name-shadowing
+
 
   -- allow user RTS overrides
   -- disable idle GC
@@ -314,6 +317,7 @@ executable ghcide
     cpp-options:   -DMONITORING_EKG
 
 test-suite ghcide-tests
+  import: warnings
   type:               exitcode-stdio-1.0
   default-language:   Haskell2010
   build-tool-depends:
@@ -371,9 +375,7 @@ test-suite ghcide-tests
     build-depends: ghc-typelits-knownnat
 
   hs-source-dirs:     test/cabal test/exe test/src
-  ghc-options:
-    -threaded -Wall -Wno-name-shadowing -O0
-    -Wno-unticked-promoted-constructors -Wunused-packages
+  ghc-options:        -threaded -O0 -Wno-name-shadowing
 
   main-is:            Main.hs
   other-modules:
