--- a/plugins/hls-explicit-fixity-plugin/hls-explicit-fixity-plugin.cabal
+++ b/plugins/hls-explicit-fixity-plugin/hls-explicit-fixity-plugin.cabal
@@ -19,7 +19,13 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options:
+    -Wall -Wunused-packages
+    -Wno-name-shadowing -Wno-unticked-promoted-constructors
+
 library
+  import: warnings
   exposed-modules:    Ide.Plugin.ExplicitFixity
 
   hs-source-dirs:     src
@@ -28,22 +34,17 @@ library
     , containers
     , deepseq
     , extra
-    , ghc
     , ghcide                == 2.6.0.0
     , hashable
     , hls-plugin-api        == 2.6.0.0
     , lsp                   >=2.3
     , text
-    , transformers
 
-  ghc-options:
-    -Wall
-    -Wno-name-shadowing
-    -Wno-unticked-promoted-constructors
   default-language:   Haskell2010
   default-extensions: DataKinds
 
 test-suite tests
+  import: warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
