Cut down the nix workflow more

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -58,9 +58,11 @@ jobs:
       with:
         name: haskell-language-server
         authToken: ${{ secrets.HLS_CACHIX_AUTH_TOKEN }}
+    # Don't try and run the build (although that would be a good
+    # test), it takes a long time and we have sometimes had
+    # glibc incompatibilities with the runners
     - run: |
-        nix develop --print-build-logs --command cabal update
-        nix develop --print-build-logs --command cabal build
+        nix develop --print-build-logs --command true
 
   nix_post_job:
     if: always()
