--- a/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
+++ b/plugins/hls-explicit-record-fields-plugin/hls-explicit-record-fields-plugin.cabal
@@ -25,16 +25,13 @@ flag pedantic
   manual:      True
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wunused-packages -Wincomplete-record-updates
 
 library
     import:           warnings
     exposed-modules:  Ide.Plugin.ExplicitFields
-    -- other-modules:
-    -- other-extensions:
     build-depends:
       , base                  >=4.12 && <5
-      , ghc
       , ghcide                == 2.6.0.0
       , hls-plugin-api        == 2.6.0.0
       , lsp
@@ -43,8 +40,6 @@ library
       , text
       , syb
       , transformers
-      , ghc-boot-th
-      , unordered-containers
       , containers
       , aeson
     hs-source-dirs:   src
@@ -57,8 +52,6 @@ library
 test-suite tests
     import:           warnings
     default-language: Haskell2010
-    -- other-modules:
-    -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
     main-is:          Main.hs
@@ -67,5 +60,4 @@ test-suite tests
       , filepath
       , text
       , hls-explicit-record-fields-plugin
-      , lsp-test
       , hls-test-utils
