--- a/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
+++ b/plugins/hls-floskell-plugin/hls-floskell-plugin.cabal
@@ -20,7 +20,11 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import:           warnings
   exposed-modules:  Ide.Plugin.Floskell
   hs-source-dirs:   src
   build-depends:
@@ -31,11 +35,11 @@ library
     , lsp-types       ^>=2.1
     , mtl
     , text
-    , transformers
 
   default-language: Haskell2010
 
 test-suite tests
+  import:           warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
