--- a/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
+++ b/plugins/hls-module-name-plugin/hls-module-name-plugin.cabal
@@ -23,7 +23,11 @@ source-repository head
     type:     git
     location: https://github.com/haskell/haskell-language-server.git
 
+common warnings
+  ghc-options: -Wall -Wunused-packages
+
 library
+  import: warnings
   exposed-modules:  Ide.Plugin.ModuleName
   hs-source-dirs:   src
   build-depends:
@@ -37,11 +41,11 @@ library
     , lsp
     , text
     , transformers
-    , unordered-containers
 
   default-language: Haskell2010
 
 test-suite tests
+  import:           warnings
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs:   test
